Diverse Extension Methods toegevoegd

--- a/NetExtensions.NetCore/NetExtensions.NetCore.csproj
+++ b/NetExtensions.NetCore/NetExtensions.NetCore.csproj
@@ -6,4 +6,6 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <Import Project="..\NetExtensions.Shared\NetExtensions.Shared.projitems" Label="Shared" />
+
 </Project>
